[package]
name = "logsearcher-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
axum-macros = "0.4.1"
bigdecimal = "0.4.3"
chrono = {version="0.4.31", features=["serde"]}
dotenv = "0.15.0"
num-traits = "0.2.18"
serde = {version="1.0.193", features=["derive"]}
serde_json = "1.0.108"
sqlx = { version = "0.7.4", features = ["sqlx-postgres", "postgres", "chrono", "runtime-tokio", "bigdecimal"] }
tokio = {version="1.35.0", features=["full"]}
tower-http = {version="0.5.0", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
